fixing layout on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -52,40 +52,34 @@ main {
       padding-bottom: 0px;
       background-position: center top;
       background-repeat: no-repeat;
-      height: 0;
-      padding-top: 40%;
+      height: 80vh;
+      min-height: 400px;
       @include media($medium) {
          background-size: cover;
          background-position: 12% 0px;
-         padding-top: 50%;
-         height: 50vh;
       }
    }
 
-   .button {
-      border: 1px solid $black;
-      background-color: $white;
-      border-radius: 24px;
-      height: 48px;
-      width: 280px;
-      margin: 2em auto;
-      display: block;
+   .hero-container {
+      padding-top: 3em;
+      @include span-columns(8);
+      @include shift(2);
+      @include media($large) {
+         @include span-columns(10);
+         @include shift(1);
+      }
+   }
+
+   .hero-text {
       text-align: center;
-      &:hover {
-         background-color: $black-hover;
-      }
-      h3 {
-         color: $black;
-         padding-top: 6px;
-      }
    }
 
    .hero-button {
       background-color: $black;
       border-radius: 26px;
       height: 52px;
-      width: 300px;
-      margin: 2em auto 0em;
+      width: 280px;
+      margin: 20em auto 0em;
       &:hover {
          background-color: $hero-hover;
       }
@@ -95,25 +89,22 @@ main {
       }
    }
 
-   #home-gallery,
-   #technique, #artist, #offer /* this for other pages: */ {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      background-color: $black;
-   }
-
-   .hero-container {
-      padding-top: 3em;
-      position: absolute;
-      @include span-columns(8);
-      @include shift(2);
-      @include media($large) {
-         @include span-columns(10);
-         @include shift(1);
+   .button {
+      border: 1px solid $black;
+      background-color: $white;
+      border-radius: 24px;
+      height: 48px;
+      max-width: 280px;
+      width: 100%;
+      margin: 2em auto;
+      display: block;
+      text-align: center;
+      &:hover {
+         background-color: $black-hover;
       }
-      .hero-text {
-         text-align: center;
+      h3 {
+         color: $black;
+         padding-top: 6px;
       }
    }
 
@@ -233,7 +224,6 @@ main {
    // IMAGES
    #home-hero-image {
       background-image: url("/img/test.jpg");
-      opacity: 0.9;
    }
 
    #home-banner-1 {
